src/test/deca/context/invalid/ContextAvecObjet/New/intEqualsNew.deca
// Description:
//    Déclaration d'une classe dans un int
//
// Resultats:
//    Erreur contextuelle ligne 9
//    un type class était attendu!

class A {
    int x;
}

{
    int x = new A();
}